Fix alignment.

--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ h1 {
 
 	/* Oh CSS. */
 	margin-left: -341px;
-	margin-top: -252px;
+	margin-top: -227px;
 
 	text-align: justify;
 	padding: 20px 40px 10px 40px;
